<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="MiPushAppId">2882303761517505015</string>
    <string name="MiPushAppKey">5271750598015</string>

    <string name="action_settings">Settings</string>
    <string name="app_name">游云通讯</string>
    <string name="button_send">发送</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_loosen_end">松开结束</string>
    <string name="button_take_photo">拍照</string>
    <string name="button_picture">图片</string>
    <string name="button_photo_gallery">相册</string>
    <string name="button_file">文件</string>
    <string name="button_location">位置</string>
    <string name="title_youyun">游云通讯</string>
    <string name="title_test_demo">测试Demo</string>
    <string name="btn_login_without_register">免注册登录</string>
    <string name="youyun_host">www.17youyun.com</string>
    <string name="btn_back">返回</string>
    <string name="btn_clear">清空</string>
    <string name="bottom_message">消息</string>
    <string name="bottom_contacts">联系人</string>
    <string name="bottom_group">群组</string>
    <string name="bottom_me">我</string>
    <string name="new_msg_sound_alert">新消息声音提醒</string>
    <string name="new_msg_vibrate_alert">新消息震动提醒</string>
    <string name="tel_recv_model">听筒模式</string>
    <string name="push_alert_time">push提醒时段</string>
    <string name="current_version">当前版本</string>
    <string name="version_info">版本信息</string>
    <string name="string_confirm">确定</string>
    <string name="string_setting">设置</string>
    <string name="string_cancle">取消</string>
    <string name="search_group">查找群组</string>
    <string name="create_group">创建群组</string>
    <string name="confirm_create">确认创建</string>
    <string name="group_name">群名称</string>
    <string name="group_intra">群简介</string>
    <string name="group_bulletin">群公告</string>
    <string name="mandatory">必填</string>
    <string name="optional">选填</string>
    <string name="group_member">群成员</string>
    <string name="msg_push">消息推送</string>
    <string name="msg_no_disturb">消息免打扰</string>
    <string name="clear_chat_record">清空聊天记录</string>
    <string name="exit_group">退出群组</string>
    <string name="invite">邀请</string>
    <string name="invite_member">邀请成员</string>
    <string name="confirm_invite">确认邀请</string>
    <string name="accurate_search">精准查询</string>
    <string name="dim_search">模糊查询</string>
    <string name="search">搜索</string>
    <string name="apply_add_group">申请入群</string>
    <string name="add_group_apply">入群申请</string>
    <string name="group_info">群组信息</string>
    <string name="group_intra_msg">群主很懒,没有填写简介</string>
    <string name="add_group_apply_msg">请填写入群申请</string>
    <string name="notice">通知</string>
    <string name="group_notice">群组通知</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="click_enter_group">点击入群</string>
    <string name="verify">验证：</string>
    <string name="enter_group_apply">%1$s申请入群%2$s</string>
    <string name="agree_enter_group">%1$s已同意您加入群组%2$s的申请</string>
    <string name="refuse_enter_group">%1$已拒绝您加入群组%2$s的申请</string>
    <string name="rqcode_msg">请将二维码置于取景框内扫描。</string>
    <string name="scan">扫描</string>
    <string name="contact_detail">联系人详情</string>
    <string name="contact_im">与TA联系（IM）</string>
    <string name="contact_voip">与TA联系（VoIP）</string>
    <string name="refresh_user">刷新成员</string>
    <string name="user_list">成员列表(%1$d)</string>
    <string name="user_info">昵称：%1$s  ID：%2$s  房间ID：%3$s</string>
    <string name="more_conference">多人电话会议</string>
    <string name="hangup_leave">挂断离开</string>
    <string name="hangup">挂断</string>
    <string name="answer">接听</string>
    <string name="accept">接受</string>
    <string name="conference_invite">电话会议邀请</string>
    <string name="conference_invite_msg">%1$s邀请你加入多人电话会议</string>
    <string name="version_1">1、支持基础IM功能，支持以下消息类型：文本、表情、异步语音、照片、拍照上传；</string>
    <string name="version_2">2、支持两种聊天模式：单聊和群聊；同时群聊场景下支持基础群管理操作；</string>
    <string name="version_3">3、支持一对一实时语音通话和多人语音会议功能；同时支持基础通话操作，如静音模式切换、听筒模式切换等；</string>
    <string name="version_4">4、为方便开发者测试，联系人列表支持搜索到附近1公里内用户；</string>
    <string name="version_5">5、支持正版授权表情商城；</string>
    <string name="youyun_version">游云通讯\t版权所有</string>
    <string name="version_function">版本功能：</string>
    <string name="app_setting">应用设置</string>
    <string name="home">主页</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="incompatible_msg">收到一条不兼容的消息，请检查客户端版本是否最新。</string>
    <string name="switch_test_version">切换到测试版本</string>
    <string name="switch_online_version">切换到正式版本</string>
    <string name="location_tips">为方便开发者公司内部测试，系统自动读取附近一公里用户。</string>
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群</string>
    <string name="create_group2">创建群</string>
    <string name="chat_room">聊天室</string>
    <string name="select_group_type">请选择群类型</string>
    <string name="next">下一步</string>
    <string name="group_size">群规模</string>
    <string name="add_group_verify">加群验证</string>
    <string name="create">创建</string>
    <string name="create_chat_room">创建聊天室</string>
    <string name="chat_room_name">聊天室名称</string>
    <string name="chat_room_intra">聊天室简介</string>

    <!-- profile -->
    <string name="my_profile">个人中心</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="email">邮箱</string>
    <string name="friend_validation">好友验证</string>
    <string name="emotion_mall">表情商城</string>
    <string name="logout">退出登录</string>

    <string name="please_input_uid">请输入用户uid</string>
    <string name="please_input_gid">请输入群id</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_pwd_no_less_6">请输入密码（不少于6个字符）</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_input_pwd_again">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="del_friend">删除好友</string>
    <string name="group_type">群类型</string>
    <string name="group_id">群ID</string>
    <string name="all_group_users">全部群成员（%1$d）</string>
    <string name="users_not_speak">成员禁言</string>
    <string name="dissolve_this_group">解散该群</string>
    <string name="exit_this_group">退出该群</string>
    <string name="allow_anyone">允许任何人</string>
    <string name="need_verify">需要身份验证</string>
    <string name="not_allow_add">不允许加入</string>
    <string name="manager_team">管理团队</string>
    <string name="del_group">删除该群</string>
    <string name="p_input_group_name">请输入群名称</string>
    <string name="p_input_group_intra">请输入群简介</string>
    <string name="p_input_group_bulletin">请输入群公告</string>
    <string name="group_intra_limit_600">群简介限600字</string>
    <string name="group_bulletin_limit_600">群公告限600字</string>
    <string name="group_intra_not_empty">群简介不能为空</string>
    <string name="group_bulletin_not_empty">群公告不能为空</string>
    <string name="group_name_not_empty">群名称不能为空</string>
    <string name="group_name_limit_64">群名称限64字</string>
    <string name="group_size_50_p">50人</string>
    <string name="group_size_100_p">100人</string>
    <string name="group_size_200_p">200人</string>
    <string name="group_size_500_p">500人</string>
    <string name="group_size_1000_p">1000人</string>
    <string name="group_size_2000_p">2000人</string>
    <string name="upgrade">升级</string>
    <string name="not_support_contact_yy">暂不支持，请联系游云通讯</string>
    <string name="yy_qq">游云通讯QQ：3047135552</string>
    <string name="relieve_administrato">解除管理员</string>
    <string name="banned">禁言</string>
    <string name="relieve_banned">解禁</string>
    <string name="del_member">删除成员</string>
    <string name="group_manager_transfer">群主转让</string>
    <string name="upgrade_administrato">升级管理员</string>
    <string name="gag_time">禁言时长</string>
    <string name="permanently_banned">永久禁言</string>
    <string name="all_user_banned">全员禁言</string>
    <string name="already_banned_member">已禁言成员：</string>

</resources>
