<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".group.activity.GroupInfoActivity"
    tools:showIn="@layout/activity_group_info">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:counterEnabled="true"
        app:counterMaxLength="64"
        app:counterOverflowTextAppearance="@style/MyOverflowText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorStyle">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/p_input_group_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_intra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:counterEnabled="true"
        app:counterMaxLength="600"
        app:counterOverflowTextAppearance="@style/MyOverflowText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_intra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:lines="3" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/llc_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:divider="@drawable/shape_divider"
        app:showDividers="middle">

        <LinearLayout
            android:id="@+id/ll_allow_anyone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_white_gray_selector"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/allow_anyone"
                android:textColor="@color/color_000000" />

            <ImageView
                android:id="@+id/iv_allow_anyone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/select_icon"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_need_verify"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_white_gray_selector"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/need_verify"
                android:textColor="@color/color_000000" />

            <ImageView
                android:id="@+id/iv_need_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/select_icon"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_not_allow_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_white_gray_selector"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_allow_add"
                android:textColor="@color/color_000000" />

            <ImageView
                android:id="@+id/iv_not_allow_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/select_icon"
                android:visibility="gone" />

        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/llc_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:divider="@drawable/shape_divider"
        app:showDividers="middle">

        <LinearLayout
            android:id="@+id/ll_size_50"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_f6f6f6"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group_size_50_p"
                android:textColor="@color/color_000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_size_100"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_ffffff"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group_size_100_p"
                android:textColor="@color/color_000000" />

            <TextView
                android:id="@+id/tv_size_100"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/upgrade"
                android:textColor="@color/color_ffffff"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_size_200"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_ffffff"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group_size_200_p"
                android:textColor="@color/color_000000" />

            <TextView
                android:id="@+id/tv_size_200"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/upgrade"
                android:textColor="@color/color_ffffff"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_size_500"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_ffffff"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group_size_500_p"
                android:textColor="@color/color_000000" />

            <TextView
                android:id="@+id/tv_size_500"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/upgrade"
                android:textColor="@color/color_ffffff"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_size_1000"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_ffffff"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group_size_1000_p"
                android:textColor="@color/color_000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_support_contact_yy"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_size_2000"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_ffffff"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group_size_2000_p"
                android:textColor="@color/color_000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_support_contact_yy"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/yy_qq" />

    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>
